--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,42 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
         <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
-        <div id="map" class="map"></div>
+        <div class="row">
+            <div id="map-div" class="col-md-8">
+                <div id="map" class="map"></div>
+            </div>
+            <div id="data-div" class="col-md-4 table-responsive">
+                <span style="float: left;">UTC Time, other data helpful to be here, etc., status of tool</span>
+                <a href="http://capsci.com/"><img src="images\capsci1_400x400.png" height="80px" style="margin:10px; float: right;"></a>
+                <table class="table table-striped table-hover table-sm">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">ICAO</th>
+                            <th scope="col">Latitude</th>
+                            <th scope="col">Longitude</th>
+                            <th scope="col">Last Report</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a href="#" onclick="olMapPan(-112,36)">Ahem</a></td>
+                            <td>40</td>
+                            <td>-84</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td><a href="#" onclick="olMapPan(-180,-89)">Cough</a></td>
+                            <td>40</td>
+                            <td>-84</td>
+                            <td>4</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
         <script id="__bs_script__">//<![CDATA[
         document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
         //]]></script>
